# esp32lvgl_demo

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/mqtt_manager/: CMakeLists.txt  mqtt_manager.c
components/mqtt_manager/include/: mqtt_manager.h
components/read_lcd_id_bsp/: CMakeLists.txt
components/wifi_manager/: CMakeLists.txt  wifi_manager.c
components/wifi_manager/include/: wifi_manager.h
docs/: system_overview.md
main/: CMakeLists.txt  example_qspi_with_ram.c  idf_component.yml
main/ui/: filelist.txt  ui.c  ui.h  ui_Screen2.c  ui_Screen2.h  ui_Screen4.c  ui_Screen4.h  ui_comp.c  ui_comp.h  ui_comp_bubble.c  ui_comp_bubble.h  ui_comp_hook.c  ui_comp_hook.h  ui_events.h  ui_font_FontLarge.c  ui_font_FontVeryLarge.c  ui_font_FontVeryVeryLarge.c  ui_helpers.c  ui_helpers.h  ui_img_logo_de_audi__png.c
